--- a/assets/css/classes.css
+++ b/assets/css/classes.css
@@ -1,4 +1,3 @@
-
 .main-bg {
   background-image: url('../img/main-bg.svg');
   background-size: cover;
@@ -28,4 +27,28 @@
 body .full-width {
   width: 100%;
   flex: 1 1 100%;
+}
+
+.gallery-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.gallery-column {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center; /* Centraliza as imagens */
+}
+
+.gallery-img {
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.gallery-img img {
+  width: 100%;
+  height: auto;
 }
